Add redux and css

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,42 @@
 /* Base Application Styles */
+
+
+/* General */
+h1{
+  font-size: 24px;
+}
+h2 {
+  font-size: 20px;
+}
+
+.navbar-transparent {
+   background-color: transparent;
+   background: transparent;
+   border-color: transparent;
+}
+
+.navbar{
+  font-size: 18px;
+  padding-top: 17px;
+  padding-bottom: 17px;
+}
+
+.navbar-brand{
+  padding: 0px !important;
+}
+.navbar li {
+   color: #000000;
+}
+
+.navbar-toggle .icon-bar {
+    background-color: black;
+    /*min-height: 22px;*/
+}
+
+.navbar-nav > li{
+  margin-left:32px;
+  margin-right:32px;
+}
+.nav > li > a: focus, .nav > li > a :hover {
+  background-color: transparent;
+}
